[gd_scene load_steps=3 format=3 uid="uid://b5w80tm13jp3f"]

[ext_resource type="Script" path="res://shop/shop.gd" id="1_jdxp4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qanhs"]
bg_color = Color(0.215465, 0.215462, 0.220104, 1)

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_jdxp4")

[node name="ItemList" type="ItemList" parent="."]
custom_minimum_size = Vector2(300, 500)
layout_mode = 0
offset_left = 800.0
offset_top = 40.0
offset_right = 1100.0
offset_bottom = 540.0
max_text_lines = 2
fixed_column_width = 300

[node name="ItemDescription" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 390.0
offset_right = 765.0
offset_bottom = 540.0
theme_override_font_sizes/normal_font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_qanhs")

[node name="Buy" type="Button" parent="."]
layout_mode = 0
offset_left = 800.0
offset_top = 550.0
offset_right = 1100.0
offset_bottom = 630.0
theme_override_font_sizes/font_size = 35
text = "Purchase"

[node name="Balance" type="Label" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 550.0
offset_right = 515.0
offset_bottom = 630.0
theme_override_font_sizes/font_size = 35

[node name="Leave" type="Button" parent="."]
layout_mode = 0
offset_left = 565.0
offset_top = 550.0
offset_right = 765.0
offset_bottom = 630.0
theme_override_font_sizes/font_size = 35
text = "Leave"

[connection signal="purchased_item" from="." to="." method="_on_purchased_item"]
[connection signal="item_selected" from="ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="pressed" from="Buy" to="." method="purchase_item"]
[connection signal="pressed" from="Leave" to="." method="_on_leave_button_pressed"]
